<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">烂笔头</string>

    <string-array name="listen_clipboard_time_title">
        <item>5秒</item>
        <item>15秒</item>
        <item>30秒</item>
        <item>2分钟</item>
    </string-array>
    <string-array name="listen_clipboard_time_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="edit_page_color_key">edit_page_color_key</string>
    <string name="font_color_key">font_color_key</string>
    <string name="is_support_clipboard_key">is_support_clipboard_key</string>
    <string name="listen_clipboard_time_key">listen_clipboard_time_key</string>
    <string name="reset_all_setting_key">reset_all_setting_key</string>
    <string name="app_use_courses_key">app_use_courses_key</string>
    <string name="share_app_to_friend_key">share_app_to_friend_key</string>
    <string name="about_developer_key">about_developer_key</string>

    <string name="share_to_note">添加到烂笔头备忘</string>
    <string name="you_just_clear_all_data">您刚刚清空了内容\u000d</string>
    <string name="touch_to_input">点击此处开始输入内容</string>
    <string name="have_add_clip">剪切板内容已经加入烂笔头</string>
    <string name="have_add_share">分享内容已经加入烂笔头</string>
    <string name="not_clear">后悔了</string>
    <string name="share_app_description">我发现了一个非常不错的App叫【烂笔头】，\n点击下载http://www.wandoujia.com/apps/com.ted.jots.myjot</string>
    <string name="app_courses">烂笔头小技巧</string>
    <string name="courses_des">应用虽小，还是有一些小技巧滴</string>
    <string name="courses_title">应用使用技巧</string>
    <string name="courses_description">1、复制任何文本内容，摇一摇手机即可快速保存\n2、在其他应用分享文本内容时，选择添加到烂笔头即可保存\n3、更多便捷功能，敬请期待</string>
    <string name="listen_clipboard_des">复制内容之后在%s以内摇一摇，即可快速记录内容</string>
    <string name="no_data_tips">别闹，先输入点文字再说吧！</string>
    <string name="config_app">设置应用</string>
    <string name="share_to">分享内容</string>
    <string name="delete_all_data">清空内容</string>
    <string name="no_market_tips">你还未安装应用市场哟</string>
    <string name="setting">设置</string>
    <string name="i_see">知道了</string>
    <string name="config_color">颜色设置</string>
    <string name="background_color_des">设置编辑页面和桌面小部件的背景颜色</string>
    <string name="background_color">背景颜色</string>
    <string name="font_color_des">设置编辑页面和桌面小部件的字体颜色</string>
    <string name="font_color">字体颜色</string>
    <string name="fast_input_setting">快捷输入设置</string>
    <string name="fast_input_des">复制内容之后，只要摇一摇即可快捷记录内容</string>
    <string name="fast_input_title">是否监听剪切板</string>
    <string name="listen_clipboard_time">监听剪切板时间</string>
    <string name="other_setting">其他设置</string>
    <string name="reset_all_tips">您确定要恢复最初设置么？</string>
    <string name="reset">重置</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="reset_all_des">将所有设置恢复默认值</string>
    <string name="reset_all_title">重置所有设置</string>
    <string name="share_app_des">好东西当然一起分享</string>
    <string name="share_app_title">分享应用给好友</string>
    <string name="about_developer">关于开发者</string>
    <string name="close">关闭</string>
    <string name="praise_developer">点赞</string>
    <string name="developer_description">熊伟(Ted)\nAndroid程序开发者\nhttp://mrxiong.com/</string>
    <string name="first_start_tips">长按圆形图标即可唤出菜单页面</string>
</resources>
